--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
 </head>
 <body>
     <h1>Welcome to our wbsite</h1>
+    <main>
+        <div class="container">
+            <h2>our product</h2>
+            <h2>git chescout
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem neque deleniti vel quia necessitatibus quis aliquid ad id minus modi veniam cupiditate ipsum hic temporibus, dolore nobis nostrum! Explicabo nesciunt totam est?git 
+            </h2>
+        </div>
+    </main>
 </body>
 </html>
