--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>Welcome to our wbsite</h1>
+    <nav>
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Angular</a></li>
+
+        </ul>
+    </nav>
     <main>
         <div class="container">
             <h2>our product</h2>
