--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Online Store</title>
 </head>
 <body>
-    <h1>Welcome to our wbsite</h1>
+    <h1>Welcomegit  to our wbsite</h1>
     <main>
         <div class="container">
             <h2>our product</h2>
